--- a/pages/terms/terms.scss
+++ b/pages/terms/terms.scss
@@ -61,13 +61,18 @@ $footerBgColor: #404040;
 
 html, body {
   height: 100%;
+  font-size: 16px;
   font-family: 'Roboto', sans-serif;
+
+  @media all and (max-width: 720px) {
+    font-size: 18px;
+  }
 }
 
 .page-container {
   min-height: calc(100% - 280px);
 
-  min-width: 680px;
+  //min-width: 680px;
 }
 
 // Container
@@ -75,32 +80,34 @@ html, body {
   max-width: $screenWidth;
   height: 100%;
   margin: 0 auto;
+  font-size: 0;
+  overflow: hidden;
 
-  @include clearfix;
+  //@include clearfix;
 
   .container__left {
     width: 50%;
     height: 100%;
-    float: left;
+    display: inline-block;
 
-    @include clearfix;
+    //@include clearfix;
   }
 
   .container__right {
     width: 50%;
     height: 100%;
-    float: right;
+    display: inline-block;
 
-    @include clearfix;
+    //@include clearfix;
   }
 
   @media all and (max-width: 880px) {
     .container__left {
-      width: 260px;
+      width: 162px;
     }
 
     .container__right {
-      width: calc(100% - 260px);
+      width: calc(100% - 162px);
     }
   }
 }
@@ -112,9 +119,12 @@ html, body {
 
   .header__logo {
     height: 100%;
-    padding-left: 20px;
+    width: 142px;
+    margin-left: 20px;
 
-    @include verticalMiddle;
+    background-image: url(../../images/logo.svg);
+    background-repeat: no-repeat;
+    background-position: -13px 6px;
   }
 
   .header__link {
@@ -126,37 +136,20 @@ html, body {
   }
 
   .header__link_item {
-    padding: 0px 18px;
+    padding: 0px 19px;
 
     @include verticalMiddle;
-  }
-
-  .header__pic {
-    height: 42px;
-    width: 42px;
-    background-image: url(../../images/logo.svg);
-    background-repeat: no-repeat;
-    background-position: -16px -4px;
-
-    @extend .verticalAlignClass;
-  }
-
-  .header__slogan {
-    color: #fff;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-
-    margin-left: 5px;
-
-    @extend .verticalAlignClass;
   }
 
   .header__nav {
     height: 100%;
     color: #fff;
-    font-size: .75em;
+    font-size: .75rem;
     font-weight: bold;
+  }
+
+  .header__burger {
+    display: none;
   }
 
   .header__list {
@@ -165,6 +158,11 @@ html, body {
     height: 100%;
     text-transform: uppercase;
     float: right;
+    font-size: 0;
+  }
+
+  .header__list_open {
+    display: none;
   }
 
   .header__item {
@@ -178,7 +176,36 @@ html, body {
     }
   }
 
+  @media all and (max-width: 690px){
+    .header__burger {
+      display: inline-block;
+      float: right;
+      width: 20px;
+      height: 16px;
+
+      margin: 24px 20px;
+    }
+
+    .header__list {
+      display: none;
+    }
+
+    .header__list_open {
+      display: block;
+      width: calc(100% + 162px);
+      position: relative;
+      top: 0;
+    }
+
+    .header__item {
+      width: 100%;
+      background-color: $headerBgColor;
+      border-top: 1px solid white;
+    }
+  }
+
   .header__text {
+    font-size: .75rem;
     @extend .verticalAlignClass;
   }
 
@@ -188,17 +215,19 @@ html, body {
     background-image: url(../../images/pic-arrow.svg);
     background-repeat: no-repeat;
     background-position: -1px -2px;
-    margin-left: 12px;
+
+    margin-left: 14px;
+    margin-right: 7px;
 
     @extend .verticalAlignClass;
   }
 
   .header__pic-heart {
-    width: 20px;
-    height: 17px;
+    width: 24px;
+    height: 18px;
     background-image: url(../../images/pic-heart.svg);
     background-repeat: no-repeat;
-    background-position: 0px -1px;
+    background-position: 0px 0px;
     margin-right: 8px;
 
     @extend .verticalAlignClass;
@@ -218,6 +247,7 @@ html, body {
   // Term navigation
   .term-nav {
     height: 48px;
+    overflow: hidden;
     background-color: $termNavBg;
   }
 
@@ -229,10 +259,10 @@ html, body {
   }
 
   .term-nav__item {
-    height: 45px;
+    height: 100%;
     margin-right: 30px;
     display: inline-block;
-
+    border-bottom: 8px solid transparent;
     transition: border-bottom .3s ease-in-out;
   }
 
@@ -265,11 +295,13 @@ html, body {
 
     color: $termNavLinkColor;
 
-    font-size: .9em;
+    font-size: .9rem;
     font-weight: bold;
     text-decoration: none;
 
-    @include verticalMiddle;
+    padding: 15px 0;
+
+    //@include verticalMiddle;
   }
 
   // Article
@@ -279,10 +311,11 @@ html, body {
 
   .article__header {
     color: $articleHeaderColor;
-    font-size: 2.25em;
+    font-size: 2.25rem;
     font-weight: bold;
 
-    margin: 30px 0 0;
+    margin: 32px 0 0;
+    padding-left: 8px;
 
     @extend .paddingMarginZero;
   }
@@ -293,7 +326,7 @@ html, body {
 
   .article__update {
     color: $articleUpdate;
-    font-size: .9em;
+    font-size: .9rem;
 
     margin: 20px 0 0;
 
@@ -302,6 +335,8 @@ html, body {
 
   .article__update_center {
     text-align: center;
+    margin: 18px 0 0;
+    padding-left: 11px;
   }
 
   .article__date {
@@ -327,7 +362,7 @@ html, body {
     margin-top: 25px;
 
     &:before {
-      font-size: 1.5em;
+      font-size: 1.5rem;
       color: $termsCounter;
 
       content: counters(item, ".") ". ";
@@ -339,7 +374,7 @@ html, body {
     margin-top: 15px;
 
     &:before {
-      font-size: .9em;
+      font-size: .9rem;
     }
   }
 
@@ -357,15 +392,15 @@ html, body {
   }
 
   .terms__header {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: $termsCounter;
   }
   
   .terms__text {
     margin: 15px 0 0;
 
-    font-size: .9em;
-    line-height: 1.38em;
+    font-size: .9rem;
+    line-height: 1.38rem;
     color: $termsTextColor;
   }
 
