--- a/pages/terms/terms.css
+++ b/pages/terms/terms.css
@@ -138,11 +138,11 @@ html, body {
   transition: border-bottom .3s ease-in-out; }
 [class='content'] .term-nav__item_active {
   border-bottom: #007067 solid 6px; }
-[class='content'] .term-nav__controller {
+[class='content'] .controller {
   display: none; }
-[class='content'] .article__header {
+[class='content'] .rules {
   display: none; }
-[class='content'] .term-nav__controller:checked + .article__header {
+[class='content'] .controller:checked + .rules {
   display: block; }
 [class='content'] .term-nav__link {
   height: 100%;
@@ -174,6 +174,10 @@ html, body {
   font-weight: bold; }
 [class='content'] .article__list {
   margin-top: 20px; }
+  @media all and (max-width: 700px) {
+    [class='content'] .article__list {
+      padding-left: 10px;
+      padding-right: 5px; } }
 [class='content'] .terms {
   max-width: 640px;
   margin: 35px auto;
@@ -204,7 +208,7 @@ html, body {
 [class='content'] .terms__text {
   margin: 15px 0 0;
   font-size: .9rem;
-  line-height: 1.38rem;
+  line-height: 1.2rem;
   color: #333333; }
 [class='content'] .terms__text_next-line:before {
   content: '';
