--- a/pages/terms/terms.scss
+++ b/pages/terms/terms.scss
@@ -271,19 +271,15 @@ html, body {
   }
   
   // Make term-nav work...again.
-  .term-nav__controller {
+  .controller {
     display: none;
   }
 
-  //.term-nav__controller:checked + .term-nav__item {
-  //  border-bottom: $termNavActiveItem solid 6px;
-  //}
-
-  .article__header {
+  .rules {
     display: none;
   }
 
-  .term-nav__controller:checked + .article__header {
+  .controller:checked + .rules {
     display: block;
   }
 
@@ -345,6 +341,11 @@ html, body {
 
   .article__list {
     margin-top: 20px;
+
+    @media all and (max-width: 700px) {
+      padding-left: 10px;
+      padding-right: 5px;
+    }
   }
 
   // Terms
@@ -400,7 +401,7 @@ html, body {
     margin: 15px 0 0;
 
     font-size: .9rem;
-    line-height: 1.38rem;
+    line-height: 1.2rem;
     color: $termsTextColor;
   }
 
