--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -170,6 +170,7 @@ html, body {
     height: 100%;
     position: fixed;
     top: 64px;
+    left: 0;
     z-index: 1;
     background-color: #fff; }
   [class='contact-page'] .content__section_visible {
