--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -123,11 +123,6 @@ html, body {
     background-repeat: no-repeat;
     background-position: 0px 0px;
     margin-right: 8px; }
-  [class='contact-page'] .header_fix {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2; }
   [class='contact-page'] .content {
     height: 100%;
     background-color: #F2F2F2;
@@ -164,17 +159,12 @@ html, body {
     float: left;
     position: relative; }
   [class='contact-page'] .content__section_callback {
-    display: none;
     max-width: 100%;
     width: 100%;
     height: 100%;
-    position: fixed;
-    top: 64px;
-    left: 0;
-    z-index: 1;
     background-color: #fff; }
-  [class='contact-page'] .content__section_visible {
-    display: block; }
+  [class='contact-page'] .content__section_invisible {
+    display: none; }
   @media all and (max-width: 750px) {
     [class='contact-page'] .content__section {
       max-width: 100%; }
